--- a/WanderLost/WanderLost/Client/wwwroot/index.html
+++ b/WanderLost/WanderLost/Client/wwwroot/index.html
@@ -19,9 +19,9 @@
     </div>
     <script src="js/ErrorHandling.js"></script>
     <script src="js/Interop.js"></script>
-    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+    <!--<script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>-->
     <script src="_framework/blazor.webassembly.js"></script>
-    <script type="module" src="js/RegisterServiceWorker.js"></script>
+    <!--<script type="module" src="js/RegisterServiceWorker.js"></script>-->
 </body>
 
 </html>
